--- a/final/任务一/home/2.html
+++ b/final/任务一/home/2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>date</title>
+	<title>当前城市服务还未开通</title>
 	<link rel="stylesheet" type="text/css" href="css/2.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
