--- a/final/任务一/home/4.html
+++ b/final/任务一/home/4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>date</title>
+	<title>没有找到你要的商家哦</title>
 	<link rel="stylesheet" type="text/css" href="css/4.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
@@ -12,6 +12,5 @@
 	<span>
 		没有找到你要的商家哦
 	</span>
-	<script src="js/index.js"></script>
 </body>
 </html>
