--- a/final/任务一/home/5.html
+++ b/final/任务一/home/5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>date</title>
+	<title>sorry</title>
 	<link rel="stylesheet" type="text/css" href="css/5.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
@@ -15,6 +15,5 @@
 	<div class="btn">
 		<a href="javascript:;">继续买单</a>
 	</div>
-	<script src="js/index.js"></script>
 </body>
 </html>
